syntax = "proto3";
package account.service.v1;

message AccessKey {
    string access_key = 1;  
}

message GetUidReply {
    int64 uid = 1;
    int64 expires = 2;
}

service Account {
    rpc GetUid (AccessKey) returns (GetUidReply);
}